# ryanmolinich-ai-link-mcp-server

./: .env.example  .gitignore  FUTURE_ROADMAP.md  GEMINI.md  InternalClient.js  README.md  agent_hub.ts  ai_link.db-shm  ai_link.db-wal  api_server.js  arbitrage_scanner.js  augmented_trader.js  context7.json  database.js  debug_drift.js  debug_helius.js  demo.js  derive_drift.js  diagnose_drift.js  docker-compose.yml  drift_executor.js  drift_tools.js  dune_tools.js  example_config.json  explore_flash_sdk.js  flake.nix  flash_executor.js  flash_trade_state.json  flipside_tools.js  generate_delegate.js  index.js  market_intelligence.js  multi_agent_pipeline.js  package-lock.json  package.json  persistence.js  project_registry.json  project_tools.js  run_live_trade.js  run_swarm.js  (+32 more)
.gemini/: settings.json
_archived/ai-link-bot-trader/: package-lock.json
agents/: AgentFramework.js  AgentFramework.ts  CLIAgent.js  ClaudeAgent.js  CloudAgent.js  CodexAgent.js  Context7Agent.js  CopilotAgent.js  DriftAgent.js  FlashArbAgent.js  FlashLoanAgent.js  FlashTradeAgent.js  GeminiAgent.js  GeminiAgent.ts  IntegratorAgent.js  JupiterAgent.js  LegacySolanaAgent.js  MarketAnalyst.js  MasterAgent.js  OllamaAgent.js  OpencodeAgent.js  PerplexityAgent.js  PriceOracleAgent.js  RiskAgent.js  SolanaAgent.js  StrategyAgent.js  SwarmAgent.js  initializer.js  math_agent.js  orchestrator.js  review_agent.js  run_cli.js  run_demo.js  run_solana.js  worker_agent.js
ai-link-bot-trader/: package-lock.json
dataconnect/: dataconnect.yaml  seed_data.gql
dataconnect/example/: queries.gql
dataconnect/schema/: schema.gql
flash-arb-system/: .env.example  Cargo.toml  README.md
flash-arb-system/flash-loan-executor/programs/flash-arb/: Cargo.toml
flash-arb-system/flash-loan-executor/programs/flash-arb/src/: lib.rs
flash-arb-system/price-fetcher/: Cargo.toml
flash-arb-system/price-fetcher/src/: lib.rs  meteora.rs  orca.rs  raydium.rs
flash-arb-system/rpc-manager/: Cargo.toml
flash-arb-system/rpc-manager/src/: lib.rs
flash-arb-system/scanner-bot/: Cargo.toml
flash-arb-system/scanner-bot/src/: broadcast.rs  lib.rs  main.rs
flash-arb-system/second-wave-bot/: Cargo.toml
flash-arb-system/second-wave-bot/src/: lib.rs
flash-arb-system/swap-router/: Cargo.toml
flash-arb-system/swap-router/src/: lib.rs  pool_graph.rs  route_finder.rs  route_optimizer.rs
functions/: package-lock.json
public/: app.js  dashboard.html  index.html  satellite.html  style.css
src/dataconnect-generated/: README.md  index.cjs.js  index.d.ts
src/dataconnect-generated/.guides/: usage.md
src/dataconnect-generated/esm/: index.esm.js
tests/: test_arb_strategy.js  test_drift_agent.js  test_drift_tools.js  test_flash_loan.js  test_flash_price.js  test_jupiter_agent.js  test_master_agent.js  test_price_oracle.js  test_project_tools.js  test_server.js  test_solana_agent_verification.js  test_solana_tools.js
tools/: handlers.js  registry.js
