[workspace]
members = [
    "rpc-manager",
    "price-fetcher",
    "scanner-bot",
    "swap-router",
    "flash-loan-executor/programs/flash-arb",
    "second-wave-bot",
]

resolver = "2"

[workspace.dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"
anchor-lang = "0.29"
anchor-spl = "0.29"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# HTTP/WebSocket
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
