[package]
name = "price-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Serialization
borsh = "0.10"
serde = { workspace = true }
bytemuck = "1.14"

# Orca SDK
orca_whirlpools_client = "0.4.1" # Using specific version compatible with anchor 0.29

rpc-manager = { path = "../rpc-manager" }
