[package]
name = "scanner-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
mcp_rust_sdk = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
solana-client = "1.18.17"
solana-sdk = "1.18.17"
tracing = "0.1"
rpc-manager = { path = "../rpc-manager" }
price-fetcher = { path = "../price-fetcher" }
tracing-subscriber = "0.3"
dotenvy = "0.15"
