[package]
name = "swap-router"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Graph algorithms for routing
petgraph = "0.6"

# Numeric precision for pool math
num-bigint = "0.4"
num-traits = "0.2"
